deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uber-api
  labels:
    app: uber-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uber-api
  template:
    metadata:
      labels:
        app: uber-api
    spec:
      containers:
      - name: uber-api
        image: seven02/uberapi
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: uber-api
spec:
  type: LoadBalancer
  selector:
    app: uber-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      #nodePort: 32500
