api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uber-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  #namespace:
spec:
  rules:
  - host: api.nerdydreams.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uber-api
            port:
              number: 5000
